[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Voxel-Core/controls/VoxelSetViewer/VoxelSetViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Voxel-Core/controls/VoxelViewer/VoxelViewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Voxel-Core/engine/VoxelSetEditor/VoxelSetEditor.gd" type="Script" id=3]
[ext_resource path="res://addons/Voxel-Core/assets/classes/VoxelSet.png" type="Texture" id=4]
[ext_resource path="res://addons/Voxel-Core/assets/controls/commit.png" type="Texture" id=8]
[ext_resource path="res://addons/Voxel-Core/assets/controls/cancel.png" type="Texture" id=10]

[node name="VoxelSetEditor" type="ScrollContainer"]
anchor_right = 1.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 24.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 24.0
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 19.0
text = "VoxelSet"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 300.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="Save" type="ToolButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 189.0
margin_bottom = 24.0
hint_tooltip = "Save"
icon = ExtResource( 8 )

[node name="Close" type="ToolButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 221.0
margin_bottom = 24.0
hint_tooltip = "Close"
icon = ExtResource( 10 )

[node name="VoxelSetInfo" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 200.0
size_flags_vertical = 3

[node name="VoxelInfo" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 116.0
margin_right = 300.0
margin_bottom = 200.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VoxelInfo"]
margin_right = 300.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VoxelInfo/HBoxContainer"]
margin_top = 5.0
margin_right = 19.0
margin_bottom = 19.0
text = "ID:"

[node name="VoxelID" type="LineEdit" parent="HBoxContainer/VBoxContainer/VoxelInfo/HBoxContainer"]
margin_left = 23.0
margin_right = 81.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/VoxelInfo/HBoxContainer"]
margin_left = 85.0
margin_top = 5.0
margin_right = 127.0
margin_bottom = 19.0
text = "Name:"

[node name="VoxelName" type="LineEdit" parent="HBoxContainer/VBoxContainer/VoxelInfo/HBoxContainer"]
margin_left = 131.0
margin_right = 300.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter name..."

[node name="VoxelData" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/VoxelInfo"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 84.0
size_flags_vertical = 3

[node name="HSplitContainer" type="VSeparator" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 308.0
margin_bottom = 200.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 312.0
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VoxelSetViewer" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 712.0
margin_bottom = 200.0
size_flags_horizontal = 7
size_flags_vertical = 3
AllowEdit = true
AllowedSelections = -1
ShowHints = true

[node name="VoxelInspector" type="HBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 200.0

[node name="HSplitContainer2" type="VSeparator" parent="HBoxContainer/VoxelInspector"]
margin_right = 4.0
margin_bottom = 200.0

[node name="VoxelViewer" parent="HBoxContainer/VoxelInspector" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 340.0
margin_bottom = 200.0
rect_min_size = Vector2( 332, 200 )
size_flags_horizontal = 0
size_flags_vertical = 4
AllowEdit = true
AllowedSelections = 6
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="text_entered" from="HBoxContainer/VBoxContainer/VoxelInfo/HBoxContainer/VoxelID" to="." method="_on_VoxelID_text_entered"]
[connection signal="text_entered" from="HBoxContainer/VBoxContainer/VoxelInfo/HBoxContainer/VoxelName" to="." method="_on_VoxelName_text_entered"]
[connection signal="selected_voxel" from="HBoxContainer/VBoxContainer2/VoxelSetViewer" to="." method="_on_VoxelSetViewer_selected"]
[connection signal="unselected_voxel" from="HBoxContainer/VBoxContainer2/VoxelSetViewer" to="." method="_on_VoxelSetViewer_unselected"]
